Attempted another fix to align schedule in Anime List to the right using margin left: auto as opposed to justify-content: right, which is not supported in chrome or safari.

--- a/styles/anime-list.css
+++ b/styles/anime-list.css
@@ -15,20 +15,22 @@
 
 .animelist-instance div, .animelist-instance ul {
     display: flex;
-    display: -webkit-flex;          /* Safari */
+    display: -webkit-flex;
     align-items: center;
 }
 
 /* Anime title & picture */
 .animelist-instance div {
     justify-content: left;
-    -webkit-justify-content: left;  /* Safari 6.1+ */
+    -webkit-justify-content: left;
+    float: left;
 }
 
 /* Anime showing schedule */
 .animelist-instance ul {
-    justify-content: right;
-    -webkit-justify-content: right; /* Safari 6.1+ */
+    /* justify-content: right;
+    -webkit-justify-content: right; */
+    margin-left: auto;
 }
 
 .animelist-instance a {
